--- a/src/main/webapp/app/account/password-reset/init/password-reset-init.component.html
+++ b/src/main/webapp/app/account/password-reset/init/password-reset-init.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="card jh-card">
     <div class="row justify-content-center">
         <div class="col-md-8">
             <h1 jhiTranslate="reset.request.title">Reset your password</h1>
@@ -7,11 +7,15 @@
                 <strong>Email address isn't registered!</strong> Please check and try again.
             </div>
 
+            <div [class]="!error ? 'd-none' : null">
+                <jhi-alert-error></jhi-alert-error>
+            </div>
+
             <div class="alert alert-warning" *ngIf="!success">
                 <p jhiTranslate="reset.request.messages.info">Enter the email address you used to register.</p>
             </div>
 
-            <div class="alert alert-success" *ngIf="success === 'OK'">
+            <div class="alert alert-success" *ngIf="success">
                 <p jhiTranslate="reset.request.messages.success">Check your emails for details on how to reset your password.</p>
             </div>
 
@@ -19,7 +23,7 @@
                 <div class="form-group">
                     <label class="form-control-label" for="email" jhiTranslate="global.form.email.label">Email</label>
                     <input type="email" class="form-control" id="email" name="email" placeholder="{{'global.form.email.placeholder' | translate}}"
-                           formControlName="email">
+                           formControlName="email" #email>
                     <div *ngIf="resetRequestForm.get('email').invalid && (resetRequestForm.get('email').dirty || resetRequestForm.get('email').touched)">
                         <small class="form-text text-danger"
                            *ngIf="resetRequestForm.get('email').errors.required" jhiTranslate="global.messages.validate.email.required">
