--- a/src/main/webapp/app/account/password/password.component.html
+++ b/src/main/webapp/app/account/password/password.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="card jh-card">
     <div class="row justify-content-center">
         <div class="col-md-8" *ngIf="account$ | async as account">
             <h2 jhiTranslate="password.title" [translateValues]="{username: account.login}">Password for [<strong>{{account.login}}</strong>]</h2>
