--- a/src/main/webapp/app/admin/configuration/configuration.component.html
+++ b/src/main/webapp/app/admin/configuration/configuration.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="allConfiguration && configuration">
+<div class="card jh-card" *ngIf="allConfiguration && configuration">
     <h2 id="configuration-page-heading" jhiTranslate="configuration.title">Configuration</h2>
 
     <span jhiTranslate="configuration.filter">Filter (by prefix)</span> <input type="text" [(ngModel)]="filter" class="form-control">
