--- a/src/main/webapp/app/admin/metrics/metrics.component.html
+++ b/src/main/webapp/app/admin/metrics/metrics.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="card jh-card">
     <h2>
         <span id="metrics-page-heading" jhiTranslate="metrics.title">Application Metrics</span>
         <button class="btn btn-primary float-right" (click)="refresh()">
@@ -13,7 +13,7 @@
             [updating]="updatingMetrics"
             [jvmMemoryMetrics]="metrics.jvm">
         </jhi-jvm-memory>
-        <jhi-jvm-threads class="col-md-4" [threadData]="threadData"></jhi-jvm-threads>
+        <jhi-jvm-threads class="col-md-4" [threadData]="threads"></jhi-jvm-threads>
         <jhi-metrics-system
             class="col-md-4"
             [updating]="updatingMetrics"
@@ -21,7 +21,7 @@
         </jhi-metrics-system>
     </div>
 
-    <div *ngIf="isObjectExisting(metrics, 'garbageCollector')">
+    <div *ngIf="metricsKeyExists('garbageCollector')">
         <h3 jhiTranslate="metrics.jvm.gc.title">Garbage collector statistics</h3>
         <jhi-metrics-garbagecollector [updating]="updatingMetrics" [garbageCollectorMetrics]="metrics.garbageCollector"></jhi-metrics-garbagecollector>
     </div>
@@ -29,27 +29,26 @@
     <div class="well well-lg" *ngIf="updatingMetrics" jhiTranslate="metrics.updating">Updating...</div>
 
     <jhi-metrics-request
-        *ngIf="isObjectExisting(metrics, 'http.server.requests')"
+        *ngIf="metricsKeyExists('http.server.requests')"
         [updating]="updatingMetrics"
         [requestMetrics]="metrics['http.server.requests']">
     </jhi-metrics-request>
 
     <jhi-metrics-endpoints-requests
-        *ngIf="isObjectExisting(metrics, 'services')"
+        *ngIf="metricsKeyExists('services')"
         [updating]="updatingMetrics"
         [endpointsRequestsMetrics]="metrics.services">
     </jhi-metrics-endpoints-requests>
 
     <jhi-metrics-cache
-        *ngIf="isObjectExisting(metrics, 'cache')"
+        *ngIf="metricsKeyExists('cache')"
         [updating]="updatingMetrics"
         [cacheMetrics]="metrics.cache">
     </jhi-metrics-cache>
 
     <jhi-metrics-datasource
-        *ngIf="isObjectExistingAndNotEmpty(metrics, 'databases')"
+        *ngIf="metricsKeyExistsAndObjectNotEmpty('databases')"
         [updating]="updatingMetrics"
         [datasourceMetrics]="metrics.databases">
     </jhi-metrics-datasource>
-
 </div>
