--- a/src/main/webapp/app/home/home.scss
+++ b/src/main/webapp/app/home/home.scss
@@ -4,8 +4,8 @@ Main page styles
 
 .hipster {
   display: inline-block;
-  width: 347px;
-  height: 497px;
+  width: 100%;
+  height: 300px;
   background: url('../../content/images/jhipster_family_member_1.svg') no-repeat center top;
   background-size: contain;
 }
