--- a/src/main/webapp/content/scss/vendor.scss
+++ b/src/main/webapp/content/scss/vendor.scss
@@ -5,8 +5,8 @@ put Sass variables here:
 eg $input-color: red;
 ****************************/
 // Override Bootstrap variables
-@import 'bootstrap-variables';
+// @import 'bootstrap-variables';
 // Import Bootstrap source files from node_modules
-@import '~bootstrap/scss/bootstrap';
-
-/* jhipster-needle-scss-add-vendor JHipster will add new css style */
+// @import '~bootstrap/scss/bootstrap';
+// @import "~ng-zorro-antd/ng-zorro-antd.min.css";
+// @import "~ng-zorro-antd/style/index.min.css"
