--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -83,14 +83,17 @@ nz-header {
   box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
 }
 
-nz-content {
+nz-content.content {
   margin: 24px;
+}
+.content-login {
+  height: 100%;
 }
 
 .inner-content {
   padding: 24px;
   background: #fff;
-  height: auto;
+  height: 100%;
   margin-bottom: 24px;
 }
 .imgUrl-profile {
