--- a/src/main/webapp/app/login/login.component.scss
+++ b/src/main/webapp/app/login/login.component.scss
@@ -20,18 +20,21 @@ my-login-page .brand {
 }
 
 .my-login-page {
-  background-image: url('../../content/images/bannerlogin.gif');
+  // background-image: url('../../content/images/bannerlogin.gif');
   background-size: cover;
   height: 100%;
+  background-color: #f3f3f3;
 }
 .my-login-page .card-wrapper {
   width: 400px;
   margin: auto;
+  padding-top: 10%;
 }
 
 .my-login-page .card {
   border-color: transparent;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+  background-color: #fff;
 }
 
 .my-login-page .card.fat {
@@ -81,4 +84,18 @@ my-login-page .brand {
   .my-login-page .card.fat .card-body {
     padding: 15px;
   }
+}
+
+.login-form {
+  max-width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.login-form-forgot {
+  float: right;
+}
+
+.login-form-button {
+  width: 100%;
 }
