--- a/src/main/webapp/app/admin/user-management/user-management.component.html
+++ b/src/main/webapp/app/admin/user-management/user-management.component.html
@@ -4,6 +4,10 @@
             <span jhiTranslate="userManagement.home.title">Users</span>
         </nz-page-header-title>
         <nz-page-header-extra>
+            <button  nz-button nzType="default">
+                <i nz-icon nzType="delete" nzTheme="outline"></i>
+                <span jhiTranslate="entity.action.delete">Delete</span>
+            </button>
             <button routerLink="new" nz-button nzType="primary">
                 <i nz-icon nzType="plus" nzTheme="outline"></i>
                 <span jhiTranslate="userManagement.home.createLabel">Create a new User</span>
@@ -13,77 +17,6 @@
 
     <jhi-alert-error></jhi-alert-error>
     <jhi-alert></jhi-alert>
-    <!-- <div class="table-responsive" *ngIf="users">
-        <table class="table table-striped" aria-describedby="user-management-page-heading">
-            <thead>
-            <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending" [callback]="transition.bind(this)">
-                <th scope="col"  jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-                <th scope="col"  jhiSortBy="login"><span jhiTranslate="userManagement.login">Login</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-                <th scope="col"  jhiSortBy="email"><span jhiTranslate="userManagement.email">Email</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-                <th scope="col"></th>
-                <th scope="col"  jhiSortBy="langKey"> <span jhiTranslate="userManagement.langKey">Lang Key</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-                <th scope="col"><span jhiTranslate="userManagement.profiles">Profiles</span></th>
-                <th scope="col" jhiSortBy="createdDate"><span jhiTranslate="userManagement.createdDate">Created Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-                <th scope="col" jhiSortBy="lastModifiedBy"><span jhiTranslate="userManagement.lastModifiedBy">Last Modified By</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-                <th scope="col" jhiSortBy="lastModifiedDate"><span jhiTranslate="userManagement.lastModifiedDate">Last Modified Date</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-                <th scope="col"></th>
-            </tr>
-            </thead>
-            <tbody *ngIf ="users">
-            <tr *ngFor="let user of users; trackBy: trackIdentity">
-                <td><a [routerLink]="['./', user.login, 'view']">{{user.id}}</a></td>
-                <td>{{user.login}}</td>
-                <td>{{user.email}}</td>
-                <td>
-                    <button class="btn btn-danger btn-sm" (click)="setActive(user, true)" *ngIf="!user.activated"
-                            jhiTranslate="userManagement.deactivated">Deactivated</button>
-                    <button class="btn btn-success btn-sm" (click)="setActive(user, false)" *ngIf="user.activated"
-                            [disabled]="currentAccount.login === user.login" jhiTranslate="userManagement.activated">Activated</button>
-                </td>
-                <td>{{user.langKey}}</td>
-                <td>
-                    <div *ngFor="let authority of user.authorities">
-                        <span class="badge badge-info">{{ authority }}</span>
-                    </div>
-                </td>
-                <td>{{user.createdDate | date:'dd/MM/yy HH:mm'}}</td>
-                <td>{{user.lastModifiedBy}}</td>
-                <td>{{user.lastModifiedDate | date:'dd/MM/yy HH:mm'}}</td>
-                <td class="text-right">
-                    <div class="btn-group">
-                        <button type="submit"
-                                [routerLink]="['./', user.login, 'view']"
-                                class="btn btn-info btn-sm">
-                            <fa-icon [icon]="'eye'"></fa-icon>
-                            <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
-                        </button>
-                        <button type="submit"
-                                [routerLink]="['./', user.login, 'edit']"
-                                queryParamsHandling="merge"
-                                class="btn btn-primary btn-sm">
-                            <fa-icon [icon]="'pencil-alt'"></fa-icon>
-                            <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
-                        </button>
-                        <button type="button" (click)="deleteUser(user)"
-                                class="btn btn-danger btn-sm" [disabled]="currentAccount.login === user.login">
-                            <fa-icon [icon]="'times'"></fa-icon>
-                            <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
-                        </button>
-                    </div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-    </div> -->
-
-    <!-- <div *ngIf="users">
-        <div class="row justify-content-center">
-            <jhi-item-count [page]="page" [total]="totalItems" [itemsPerPage]="itemsPerPage"></jhi-item-count>
-        </div>
-        <div class="row justify-content-center">
-            <ngb-pagination [collectionSize]="totalItems" [(page)]="page" [pageSize]="itemsPerPage" [maxSize]="5" [rotate]="true" [boundaryLinks]="true" (pageChange)="loadPage(page)"></ngb-pagination>
-        </div>
-    </div> -->
 
     <nz-table 
     nzShowSizeChanger 
@@ -95,7 +28,7 @@
     [nzData]="users"
     [nzLoading]="users ? false : true"  
     [nzScroll]="{ x: '1350px', y: '240px' }">
-      <thead>
+      <thead (nzSortChange)="transition($event)"> 
         <tr>
           <th
           nzShowCheckbox
@@ -103,15 +36,15 @@
           [nzIndeterminate]="isIndeterminate"
           (nzCheckedChange)="checkAll($event)"
           nzWidth="50px"></th>
-          <th nzWidth="50px" nzShowSort><span jhiTranslate="global.field.id">ID</span></th>
-          <th nzShowSort nzWidth="200px"><span jhiTranslate="userManagement.login">Login</span></th>
-          <th nzShowSort nzWidth="200px"><span jhiTranslate="userManagement.email">Email</span></th>
-          <th nzShowSort nzWidth="100px"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span></th>
-          <th nzShowSort nzWidth="100px"> <span jhiTranslate="userManagement.langKey">Lang Key</span></th>
-          <th nzShowSort nzWidth="200px"><span jhiTranslate="userManagement.profiles">Profiles</span></th>
-          <th nzShowSort nzWidth="200px"><span jhiTranslate="userManagement.createdDate">Created Date</span></th>
-          <th nzShowSort nzWidth="200px"><span jhiTranslate="userManagement.lastModifiedBy">Last Modified By</span></th>
-          <th nzShowSort nzWidth="200px"><span jhiTranslate="userManagement.lastModifiedDate">Last Modified Date</span></th>
+          <th nzSortKey="id" nzWidth="50px" nzShowSort><span jhiTranslate="global.field.id">ID</span></th>
+          <th nzSortKey="login" nzShowSort nzWidth="200px"><span jhiTranslate="userManagement.login">Login</span></th>
+          <th nzSortKey="email" nzShowSort nzWidth="200px"><span jhiTranslate="userManagement.email">Email</span></th>
+          <th nzWidth="100px"><span>&nbsp;&nbsp;&nbsp;&nbsp;</span></th>
+          <th nzSortKey="langKey" nzShowSort nzWidth="100px"> <span jhiTranslate="userManagement.langKey">Lang Key</span></th>
+          <th nzWidth="200px"><span jhiTranslate="userManagement.profiles">Profiles</span></th>
+          <th nzSortKey="createdDate" nzShowSort nzWidth="200px"><span jhiTranslate="userManagement.createdDate">Created Date</span></th>
+          <th nzSortKey="lastModifiedBy" nzShowSort nzWidth="200px"><span jhiTranslate="userManagement.lastModifiedBy">Last Modified By</span></th>
+          <th nzSortKey="lastModifiedDate" nzShowSort nzWidth="200px"><span jhiTranslate="userManagement.lastModifiedDate">Last Modified Date</span></th>
           <th nzWidth="250px">Ações</th>
         </tr>
       </thead>
