--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -123,12 +123,12 @@
         
 
         <div nz-row>
-          <div nz-col nzSpan="18">
+          <div nz-col nzMd="18" nzXs="18" nzLg="20">
             <span class="header-trigger" (click)="isCollapsed = !isCollapsed">
               <i class="trigger" nz-icon [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold'"></i>
             </span>
           </div>
-          <div nz-col nzSpan="3">
+          <div nz-col nzMd="3" nzXs="3" nzLg="2">
             <div class="">
               <ul nz-menu nzTheme="light" nzMode="horizontal">
                 <li nz-submenu [nzTitle]="(getNameMenu('global.menu.account.main') | async)" nzIcon="user">
@@ -156,7 +156,7 @@
               </ul>
             </div>
           </div>
-          <div nz-col nzSpan="3" *ngIf="imgUrl">
+          <div nz-col nzMd="3" nzLg="2" nzXs="3" *ngIf="imgUrl">
             <div [ngStyle]="{'background-image': 'url('+imgUrl+')'}" class="imgUrl-profile"></div>
           </div>
         </div>
