cadastro e editar usuarios do sistema

--- a/src/main/webapp/app/admin/user-management/user-management-update.component.html
+++ b/src/main/webapp/app/admin/user-management/user-management-update.component.html
@@ -1,126 +1,144 @@
-<div class="card jh-card">
-    <div class="row justify-content-center">
-        <div class="col-8">
-            <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
-                <h2 id="myUserLabel" jhiTranslate="userManagement.home.createOrEditLabel">
-                    Create or edit a User
-                </h2>
-                <div *ngIf="user">
-                    <jhi-alert-error></jhi-alert-error>
-                    <div class="form-group" [hidden]="!user.id">
-                        <label jhiTranslate="global.field.id">ID</label>
-                        <input type="text" class="form-control" name="id" formControlName="id" readonly>
-                    </div>
-    
-                    <div class="form-group">
-                        <label class="form-control-label" jhiTranslate="userManagement.login">Login</label>
-                        <input type="text" class="form-control" name="login"
-                               formControlName="login">
-    
-                        <div *ngIf="editForm.get('login').invalid && (editForm.get('login').dirty || editForm.get('login').touched)">
-                            <small class="form-text text-danger"
-                            *ngIf="editForm.get('login').errors.required" jhiTranslate="entity.validation.required">
-                                This field is required.
-                            </small>
-    
-                            <small class="form-text text-danger"
-                            *ngIf="editForm.get('login').errors.maxlength" jhiTranslate="entity.validation.maxlength"
-                            [translateValues]="{max: 50}">
-                                This field cannot be longer than 50 characters.
-                            </small>
-    
-                            <small class="form-text text-danger"
-                            *ngIf="editForm.get('login').errors.pattern" jhiTranslate="entity.validation.patternLogin">
-                                This field can only contain letters, digits and e-mail addresses.
-                            </small>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="form-control-label" jhiTranslate="userManagement.firstName">First Name</label>
-                        <input type="text" class="form-control" name="firstName"
-                               formControlName="firstName">
-    
-                        <div *ngIf="editForm.get('firstName').invalid && (editForm.get('firstName').dirty || editForm.get('firstName').touched)">
-                            <small class="form-text text-danger"
-                            *ngIf="editForm.get('firstName').errors.maxlength" jhiTranslate="entity.validation.maxlength"
-                            [translateValues]="{max: 50}">
-                                This field cannot be longer than 50 characters.
-                            </small>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label jhiTranslate="userManagement.lastName">Last Name</label>
-                        <input type="text" class="form-control" name="lastName"
-                            formControlName="lastName">
-    
-                        <div *ngIf="editForm.get('lastName').invalid && (editForm.get('lastName').dirty || editForm.get('lastName').touched)">
-                            <small class="form-text text-danger"
-                            *ngIf="editForm.get('lastName').errors.maxlength" jhiTranslate="entity.validation.maxlength"
-                            [translateValues]="{max: 50}">
-                                This field cannot be longer than 50 characters.
-                            </small>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="form-control-label" jhiTranslate="userManagement.email">Email</label>
-                        <input type="email" class="form-control" name="email" formControlName="email">
-    
-                        <div *ngIf="editForm.get('email').invalid && (editForm.get('email').dirty || editForm.get('email').touched)">
-                            <small class="form-text text-danger"
-                            *ngIf="editForm.get('email').errors.required" jhiTranslate="entity.validation.required">
-                                This field is required.
-                            </small>
-    
-                            <small class="form-text text-danger"
-                            *ngIf="editForm.get('email').errors.maxlength" jhiTranslate="entity.validation.maxlength"
-                            [translateValues]="{max: 100}">
-                                This field cannot be longer than 100 characters.
-                            </small>
-    
-                            <small class="form-text text-danger"
-                            *ngIf="editForm.get('email').errors.minlength" jhiTranslate="entity.validation.minlength"
-                            [translateValues]="{min: 5}">
-                                This field is required to be at least 5 characters.
-                            </small>
-    
-                            <small class="form-text text-danger"
-                            *ngIf="editForm.get('email').errors.email" jhiTranslate="global.messages.validate.email.invalid">
-                                Your email is invalid.
-                            </small>
-                        </div>
-                    </div>
-                    <div class="form-check">
-                        <label class="form-check-label" for="activated">
-                            <input class="form-check-input" [attr.disabled]="user.id === undefined ? 'disabled' : null"
-                            type="checkbox" id="activated" name="activated" formControlName="activated">
-                            <span jhiTranslate="userManagement.activated">Activated</span>
-                        </label>
-                    </div>
-    
-                    <div class="form-group" *ngIf="languages && languages.length > 0">
-                        <label jhiTranslate="userManagement.langKey">Lang Key</label>
-                        <select class="form-control" id="langKey" name="langKey" formControlName="langKey">
-                            <option *ngFor="let language of languages" [value]="language">{{language | findLanguageFromKey}}</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label jhiTranslate="userManagement.profiles">Profiles</label>
-                        <select class="form-control" multiple name="authority" formControlName="authorities">
-                            <option *ngFor="let authority of authorities" [value]="authority">{{authority}}</option>
-                        </select>
-                    </div>
-                </div>
-                <div *ngIf="user">
-                    <button type="button" class="btn btn-secondary" (click)="previousState()">
-                        <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span
-                        jhiTranslate="entity.action.cancel">Cancel</span>
-                    </button>
-                    <button type="submit" [disabled]="editForm.invalid || isSaving" class="btn btn-primary">
-                        <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
-                    </button>
-                </div>
-            </form>
-        </div>
-    </div>
-</div>
+<div>
 
+    <nz-page-header [nzGhost]="false">
+        <nz-page-header-title>
+            <span jhiTranslate="userManagement.home.createOrEditLabel">Create or edit a User</span>
+        </nz-page-header-title>
+    </nz-page-header>
+
+    <form nz-form [formGroup]="editForm" (ngSubmit)="save()">
+        <nz-form-item *ngIf="user.id">
+            <nz-form-label [nzSpan]="3">
+                <span jhiTranslate="global.field.id">ID</span>
+            </nz-form-label>
+            <nz-form-control [nzSpan]="12" [nzErrorTip]="loginErrorTpl">
+                <input nz-input formControlName="id" readonly disabled="true" />
+            </nz-form-control>
+        </nz-form-item>
+
+        <nz-form-item>
+            <nz-form-label [nzSpan]="3" nzRequired>
+                <span jhiTranslate="userManagement.login">Login</span>
+            </nz-form-label>
+            <nz-form-control nzHasFeedback [nzSpan]="12" [nzErrorTip]="loginErrorTpl">
+                <input nz-input formControlName="login" />
+                <ng-template #loginErrorTpl let-control>
+                    <ng-container *ngIf="control.hasError('required')">
+                        <span jhiTranslate="entity.validation.required"></span>
+                    </ng-container>
+
+                    <ng-container *ngIf="control.hasError('maxlength')">
+                        <span jhiTranslate="entity.validation.maxlength" [translateValues]="{max: 50}"></span>
+                    </ng-container>
+
+                    <ng-container *ngIf="control.hasError('pattern')">
+                        <span jhiTranslate="entity.validation.patternLogin"></span>
+                    </ng-container>
+
+                </ng-template>
+            </nz-form-control>
+        </nz-form-item>
+
+        <nz-form-item>
+            <nz-form-label [nzSpan]="3" nzRequired>
+                <span jhiTranslate="userManagement.firstName">First Name</span>
+            </nz-form-label>
+            <nz-form-control [nzSpan]="12" nzHasFeedback [nzErrorTip]="firstNameErrorTpl">
+                <input nz-input formControlName="firstName" />
+                <ng-template #firstNameErrorTpl let-control>
+                    <ng-container *ngIf="control.hasError('maxlength')">
+                        <span jhiTranslate="entity.validation.maxlength" [translateValues]="{max: 50}"></span>
+                    </ng-container>
+                </ng-template>
+            </nz-form-control>
+        </nz-form-item>
+
+        <nz-form-item>
+            <nz-form-label [nzSpan]="3" nzRequired>
+                <span jhiTranslate="userManagement.lastName">Last Name</span>
+            </nz-form-label>
+            <nz-form-control [nzSpan]="12" nzHasFeedback [nzErrorTip]="lastNameErrorTpl">
+                <input nz-input formControlName="lastName" />
+                <ng-template #lastNameErrorTpl let-control>
+                    <ng-container *ngIf="control.hasError('maxlength')">
+                        <span jhiTranslate="entity.validation.maxlength" [translateValues]="{max: 50}"></span>
+                    </ng-container>
+                </ng-template>
+            </nz-form-control>
+        </nz-form-item>
+
+        <nz-form-item>
+            <nz-form-label [nzSpan]="3" nzRequired>E-mail</nz-form-label>
+            <nz-form-control [nzSpan]="12" nzHasFeedback [nzErrorTip]="emailErrorTpl">
+                <input nz-input formControlName="email" placeholder="email" type="email" />
+                <ng-template #emailErrorTpl let-control>
+                    <ng-container *ngIf="control.hasError('email')">
+                        <span jhiTranslate="global.messages.validate.email.invalid"></span>
+                    </ng-container>
+
+                    <ng-container *ngIf="control.hasError('required')">
+                        <span jhiTranslate="entity.validation.required"></span>
+                    </ng-container>
+
+                    <ng-container *ngIf="control.hasError('maxlength')">
+                        <span jhiTranslate="entity.validation.maxlength" [translateValues]="{max: 100}"></span>
+                    </ng-container>
+
+                    <ng-container *ngIf="control.hasError('minlength')">
+                        <span jhiTranslate="entity.validation.minlength" [translateValues]="{min: 5}"></span>
+                    </ng-container>
+                </ng-template>
+            </nz-form-control>
+        </nz-form-item>
+
+        <nz-form-item nz-row>
+            <nz-form-control [nzSpan]="12" [nzOffset]="3">
+                <label nz-checkbox formControlName="activated">
+                    <span jhiTranslate="userManagement.activated">Activated</span>
+                </label>
+            </nz-form-control>
+        </nz-form-item>
+
+        <nz-form-item *ngIf="languages && languages.length > 0">
+            <nz-form-label [nzSpan]="3">
+                <span jhiTranslate="userManagement.langKey">Lang Key</span>
+            </nz-form-label>
+            <nz-form-control [nzSpan]="12" nzHasFeedback>
+                <nz-select name="langKey" formControlName="langKey">
+                    <nz-option *ngFor="let language of languages" [nzValue]="language"
+                        [nzLabel]="language | findLanguageFromKey"></nz-option>
+                </nz-select>
+            </nz-form-control>
+        </nz-form-item>
+
+        <nz-form-item>
+            <nz-form-label [nzSpan]="3">
+                <span jhiTranslate="userManagement.profiles">Profiles</span>
+            </nz-form-label>
+            <nz-form-control [nzSpan]="12" nzHasFeedback>
+                <nz-select [nzMaxTagCount]="2" [nzMaxTagPlaceholder]="tagPlaceHolder" nzMode="multiple"
+                    name="authorities" formControlName="authorities">
+                    <nz-option *ngFor="let authority of authorities" [nzValue]="authority" [nzLabel]="authority">
+                    </nz-option>
+                </nz-select>
+                <ng-template #tagPlaceHolder let-selectedList>
+                    <span jhiTranslate="entity.select.multSelected"
+                        [translateValues]="{count: selectedList.length}"></span>
+                </ng-template>
+            </nz-form-control>
+        </nz-form-item>
+
+        <nz-form-item>
+            <nz-form-control [nzOffset]="3" [nzSpan]="12">
+                <button type="button" nz-button nzType="default" (click)="previousState()">
+                    <i nz-icon nzType="stop" nzTheme="outline"></i>
+                    <span jhiTranslate="entity.action.cancel">Cancel</span>
+                </button>
+                <button nz-button nzType="primary" [disabled]="!editForm.valid || isSaving">
+                    <i nz-icon nzType="save" nzTheme="outline"></i>
+                    <span jhiTranslate="entity.action.save"> save </span>
+                </button>
+            </nz-form-control>
+        </nz-form-item>
+    </form>
+</div>
