--- a/src/main/webapp/content/scss/global.scss
+++ b/src/main/webapp/content/scss/global.scss
@@ -93,7 +93,7 @@ nz-content.content {
 .inner-content {
   padding: 24px;
   background: #fff;
-  height: 100%;
+  min-height: 100%;
   margin-bottom: 24px;
 }
 .imgUrl-profile {
