--- a/src/main/webapp/app/entities/produto/produto-update.component.html
+++ b/src/main/webapp/app/entities/produto/produto-update.component.html
@@ -18,100 +18,129 @@
         </nz-form-item>
 
         <nz-form-item>
-            <nz-upload
-            class="avatar-uploader"
-            nzName="imagem"
-            nzListType="picture-card"
-            [nzShowUploadList]="false"
-            (nzChange)="setFileData($event, 'imagem', true)">
+            <nz-form-control [nzOffset]="3" [nzSpan]="12">
+                <nz-upload class="avatar-uploader" nzName="imagem" [nzCustomRequest]="customReq"
+                    nzListType="picture-card" [nzShowUploadList]="false"
+                    (nzChange)="setFileData($event, 'imagem', true)">
 
-                <ng-container *ngIf="!editForm.get('imagem').value">
-                    <i class="upload-icon" nz-icon [nzType]="loading ? 'loading' : 'plus'"></i>
-                    <div class="ant-upload-text">Upload</div>
-                </ng-container>
-                <img *ngIf="editForm.get('imagem').value" [src]="'data:' + editForm.get('imagemContentType').value + ';base64,' + editForm.get('imagem').value" class="avatar" />
-            </nz-upload>
-            <input type="hidden" class="form-control" name="imagem" id="field_imagem"
-                       formControlName="imagem"/>
-            <input type="hidden" class="form-control" name="imagemContentType" id="field_imagemContentType"
-                       formControlName="imagemContentType" />
+                    <ng-container *ngIf="!editForm.get('imagem').value">
+                        <i class="upload-icon" nz-icon [nzType]="'plus'"></i>
+                        <div class="ant-upload-text">
+                            <span jhiTranslate="global.field.upload"></span>
+                        </div>
+                    </ng-container>
+                    <img *ngIf="editForm.get('imagem').value"
+                        [src]="'data:' + editForm.get('imagemContentType').value + ';base64,' + editForm.get('imagem').value"
+                        style="width: 100%" />
+                </nz-upload>
+                <input type="hidden" class="form-control" name="imagem" id="field_imagem" formControlName="imagem" />
+                <input type="hidden" class="form-control" name="imagemContentType" id="field_imagemContentType"
+                    formControlName="imagemContentType" />
+            </nz-form-control>
         </nz-form-item>
 
-        
+        <nz-form-item>
+            <nz-form-label [nzSpan]="3" nzRequired>
+                <span jhiTranslate="ngzorroApp.produto.nome">Nome</span>
+            </nz-form-label>
+            <nz-form-control [nzSpan]="12" nzHasFeedback [nzErrorTip]="nomeErrorTpl">
+                <input nz-input formControlName="nome" />
+                <ng-template #nomeErrorTpl let-control>
+                    <ng-container *ngIf="control.hasError('required')">
+                        <span jhiTranslate="entity.validation.required">
+                            This field is required.</span>
+                    </ng-container>
+                </ng-template>
+            </nz-form-control>
+        </nz-form-item>
+
+        <nz-form-item>
+            <nz-form-label [nzSpan]="3" nzRequired>
+                <span jhiTranslate="ngzorroApp.produto.descricao">Descricao</span>
+            </nz-form-label>
+            <nz-form-control [nzSpan]="12" nzHasFeedback>
+                <textarea nz-input formControlName="descricao" ></textarea>
+            </nz-form-control>
+        </nz-form-item>
+
+        <nz-form-item>
+            <nz-form-label [nzSpan]="3" nzRequired>
+                <span jhiTranslate="ngzorroApp.produto.preco">Preco</span>
+            </nz-form-label>
+            <nz-form-control [nzSpan]="12" nzHasFeedback>
+                <input type="number" nz-input formControlName="preco" nzOverlayClassName="numeric-input" />
+            </nz-form-control>
+        </nz-form-item>
+
+        <nz-form-item>
+            <nz-form-label [nzSpan]="3" nzRequired>
+                <span jhiTranslate="ngzorroApp.produto.data">Data</span>
+            </nz-form-label>
+            <nz-form-control [nzSpan]="12" nzHasFeedback>
+                <nz-date-picker  formControlName="data"></nz-date-picker>
+            </nz-form-control>
+        </nz-form-item>
+
+        <nz-form-item>
+            <nz-form-label [nzSpan]="3" nzRequired>
+                <span jhiTranslate="ngzorroApp.produto.hora">Hora</span>
+            </nz-form-label>
+            <nz-form-control [nzSpan]="12" nzHasFeedback>
+                <input nz-input type="datetime-local" formControlName="hora" placeholder="YYYY-MM-DD HH:mm" /> 
+            </nz-form-control>
+        </nz-form-item>
+
+        <nz-form-item>
+            <nz-form-label [nzSpan]="3" nzRequired>
+                <span jhiTranslate="ngzorroApp.produto.categoria">Categoria</span>
+            </nz-form-label>
+            <nz-form-control [nzSpan]="12" nzHasFeedback>
+                <nz-select [nzMaxTagCount]="3" [nzMaxTagPlaceholder]="tagPlaceHolder" nzMode="multiple"
+                name="categorias" formControlName="categorias">
+                    <nz-option *ngFor="let categoriaOption of categorias; trackBy: trackCategoriaById" [nzValue]="categoriaOption" [nzLabel]="categoriaOption.id">
+                    </nz-option>
+                </nz-select>
+                <ng-template #tagPlaceHolder let-selectedList>
+                    <span jhiTranslate="entity.select.multSelected"
+                        [translateValues]="{count: selectedList.length}"></span>
+                </ng-template>
+            </nz-form-control>
+        </nz-form-item>
+
+        <nz-form-item>
+            <nz-form-control [nzOffset]="1" [nzSpan]="12">
+                <button type="button" nz-button nzType="default" (click)="previousState()">
+                    <i nz-icon nzType="stop" nzTheme="outline"></i>
+                    <span jhiTranslate="entity.action.cancel">Cancel</span>
+                </button>
+                <button nz-button nzType="primary" [disabled]="!editForm.valid || isSaving">
+                    <i nz-icon nzType="save" nzTheme="outline"></i>
+                    <span jhiTranslate="entity.action.save"> save </span>
+                </button>
+            </nz-form-control>
+        </nz-form-item>
+
     </form>
 
-    <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
-    
-            <div class="form-group col-md-6">
-                <label class="form-control-label" jhiTranslate="ngzorroApp.produto.imagem" for="field_imagem">Imagem</label>
-                <div>
-                    <img [src]="'data:' + editForm.get('imagemContentType').value + ';base64,' + editForm.get('imagem').value" style="max-height: 100px;" *ngIf="editForm.get('imagem').value" alt="produto image"/>
-                    <div *ngIf="editForm.get('imagem').value" class="form-text text-danger clearfix">
-                        <span class="pull-left">{{editForm.get('imagemContentType').value}}, {{byteSize(editForm.get('imagem').value)}}</span>
-                        <button type="button" (click)="clearInputImage('imagem', 'imagemContentType', 'file_imagem')" class="btn btn-secondary btn-xs pull-right">
-                            <fa-icon [icon]="'times'"></fa-icon>
-                        </button>
-                    </div>
-                    <input type="file" id="file_imagem" (change)="setFileData($event, 'imagem', true)" accept="image/*" jhiTranslate="entity.action.addimage"/>
-                </div>
-                <input type="hidden" class="form-control" name="imagem" id="field_imagem"
-                       formControlName="imagem"/>
-                <input type="hidden" class="form-control" name="imagemContentType" id="field_imagemContentType"
-                       formControlName="imagemContentType" />
-            </div>
-            <div class="form-group col-md-6">
-                <label class="form-control-label" jhiTranslate="ngzorroApp.produto.nome" for="field_nome">Nome</label>
-                <input type="text" class="form-control" name="nome" id="field_nome"
-                       formControlName="nome"/>
-                <div *ngIf="editForm.get('nome').invalid && (editForm.get('nome').dirty || editForm.get('nome').touched)">
-                    <small class="form-text text-danger"
-                           *ngIf="editForm.get('nome').errors.required" jhiTranslate="entity.validation.required">
-                    This field is required.
-                    </small>
-                </div>
-            </div>
-            <div class="form-group col-md-6">
-                <label class="form-control-label" jhiTranslate="ngzorroApp.produto.descricao" for="field_descricao">Descricao</label>
-                <textarea class="form-control" name="descricao" id="field_descricao"
-                          formControlName="descricao"></textarea>
-            </div>
-            <div class="form-group col-md-6">
-                <label class="form-control-label" jhiTranslate="ngzorroApp.produto.preco" for="field_preco">Preco</label>
-                <input type="number" class="form-control" name="preco" id="field_preco"
-                       formControlName="preco"/>
-            </div>
-            <!-- <div class="form-group col-md-6">
-                <label class="form-control-label" jhiTranslate="ngzorroApp.produto.data" for="field_data">Data</label>
-                <div class="input-group col-md-6">
-                    <input id="field_data" type="text" class="form-control" name="data" ngbDatepicker  #dataDp="ngbDatepicker" formControlName="data"/>
-                    <span class="input-group-append">
-                        <button type="button" class="btn btn-secondary" (click)="dataDp.toggle()"><fa-icon [icon]="'calendar-alt'"></fa-icon></button>
-                    </span>
-                </div>
-            </div> -->
-            <div class="form-group col-md-6">
-                <label class="form-control-label" jhiTranslate="ngzorroApp.produto.hora" for="field_hora">Hora</label>
-                <div class="d-flex">
-                    <input id="field_hora" type="datetime-local" class="form-control" name="hora" formControlName="hora" placeholder="YYYY-MM-DD HH:mm"/>
-                </div>
-            </div>
+    <!-- <form name="editForm" role="form" novalidate (ngSubmit)="save()" [formGroup]="editForm">
 
-            <div class="form-group col-md-12">
-                <label jhiTranslate="ngzorroApp.produto.categoria" for="field_categorias">Categoria</label>
-                <select class="form-control" id="field_categorias" multiple name="categorias" formControlName="categorias">
-                    <option [ngValue]="getSelected(editForm.get('categorias').value, categoriaOption)" *ngFor="let categoriaOption of categorias; trackBy: trackById">{{categoriaOption.id}}</option>
-                </select>
-            </div>
-        </div>
-        <div>
-            <button type="button" id="cancel-save" class="btn btn-secondary"  (click)="previousState()">
-                <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
-            </button>
-            <button type="submit" id="save-entity" [disabled]="editForm.invalid || isSaving" class="btn btn-primary">
-                <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
-            </button>
-        </div>
-    </form>
-      
+
+         <div class="form-group col-md-12">
+            <label jhiTranslate="ngzorroApp.produto.categoria" for="field_categorias">Categoria</label>
+            <select class="form-control" id="field_categorias" multiple name="categorias" formControlName="categorias">
+                <option [ngValue]="getSelected(editForm.get('categorias').value, categoriaOption)"
+                    *ngFor="let categoriaOption of categorias; trackBy: trackById">{{categoriaOption.id}}</option>
+            </select>
+        </div> 
+
+<div>
+    <button type="button" id="cancel-save" class="btn btn-secondary" (click)="previousState()">
+        <fa-icon [icon]="'ban'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.cancel">Cancel</span>
+    </button>
+    <button type="submit" id="save-entity" [disabled]="editForm.invalid || isSaving" class="btn btn-primary">
+        <fa-icon [icon]="'save'"></fa-icon>&nbsp;<span jhiTranslate="entity.action.save">Save</span>
+    </button>
 </div>
+</form> -->
 
+</div>
