--- a/src/main/webapp/app/admin/user-management/user-management.component.html
+++ b/src/main/webapp/app/admin/user-management/user-management.component.html
@@ -109,7 +109,7 @@
 </div>
 
 <nz-modal 
-[(nzVisible)]="visbleModalExcluir" 
+[(nzVisible)]="visibleModalExcluir" 
 [nzTitle]="traslateString('entity.delete.title') | async" 
 (nzOnCancel)="visbleModalExcluir = false" 
 (nzOnOk)="deleteUsers()">
