--- a/src/main/webapp/app/entities/produto/produto.component.html
+++ b/src/main/webapp/app/entities/produto/produto.component.html
@@ -1,78 +1,100 @@
-<div class="card jh-card">
-    <h2 id="page-heading">
-        <span jhiTranslate="ngzorroApp.produto.home.title">Produtos</span>
-        <button id="jh-create-entity" class="btn btn-primary float-right jh-create-entity create-produto" [routerLink]="['/produto/new']">
-            <fa-icon [icon]="'plus'"></fa-icon>
-            <span  jhiTranslate="ngzorroApp.produto.home.createLabel">
-            Create a new Produto
-            </span>
-        </button>
-    </h2>
+<div>
+    <nz-page-header [nzGhost]="false">
+        <nz-page-header-title>
+            <span jhiTranslate="ngzorroApp.produto.home.title">Produto</span>
+        </nz-page-header-title>
+        <nz-page-header-extra>
+            <button (click)="openModalDeleteChecked()"  nz-button nzType="default">
+                <i nz-icon nzType="delete" nzTheme="outline"></i>
+                <span jhiTranslate="entity.action.delete">Delete</span>
+            </button>
+            <button routerLink="new" nz-button nzType="primary">
+                <i nz-icon nzType="plus" nzTheme="outline"></i>
+                <span jhiTranslate="ngzorroApp.produto.home.createLabel">Create a new Produto</span>
+            </button>
+        </nz-page-header-extra>
+    </nz-page-header>
+
     <jhi-alert-error></jhi-alert-error>
     <jhi-alert></jhi-alert>
     <br/>
-    <div class="alert alert-warning" *ngIf="produtos?.length === 0">
-        <span jhiTranslate="ngzorroApp.produto.home.notFound">No produtos found</span>
-    </div>
-    <div class="table-responsive" *ngIf="produtos?.length > 0">
-        <table class="table table-striped" aria-describedby="page-heading">
-            <thead>
-            <tr jhiSort [(predicate)]="predicate" [(ascending)]="ascending" [callback]="transition.bind(this)">
-            <th scope="col"  jhiSortBy="id"><span jhiTranslate="global.field.id">ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th scope="col"  jhiSortBy="imagem"><span jhiTranslate="ngzorroApp.produto.imagem">Imagem</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th scope="col"  jhiSortBy="nome"><span jhiTranslate="ngzorroApp.produto.nome">Nome</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th scope="col"  jhiSortBy="descricao"><span jhiTranslate="ngzorroApp.produto.descricao">Descricao</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th scope="col"  jhiSortBy="preco"><span jhiTranslate="ngzorroApp.produto.preco">Preco</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th scope="col"  jhiSortBy="data"><span jhiTranslate="ngzorroApp.produto.data">Data</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th scope="col"  jhiSortBy="hora"><span jhiTranslate="ngzorroApp.produto.hora">Hora</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th scope="col"></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr *ngFor="let produto of produtos ;trackBy: trackId">
-                <td><a [routerLink]="['/produto', produto.id, 'view' ]">{{produto.id}}</a></td>
-                <td>
-                    <a *ngIf="produto.imagem" (click)="openFile(produto.imagemContentType, produto.imagem)">
-                        <img [src]="'data:' + produto.imagemContentType + ';base64,' + produto.imagem" style="max-height: 30px;" alt="produto image"/>
-                    </a>
-                    <span *ngIf="produto.imagem">{{produto.imagemContentType}}, {{byteSize(produto.imagem)}}</span>
-                </td>
-                <td>{{produto.nome}}</td>
-                <td>{{produto.descricao}}</td>
-                <td>{{produto.preco}}</td>
-                <td>{{produto.data | date:'mediumDate'}}</td>
-                <td>{{produto.hora | date:'medium'}}</td>
-                <td class="text-right">
-                    <div class="btn-group">
-                        <button type="submit"
-                                [routerLink]="['/produto', produto.id, 'view' ]"
-                                class="btn btn-info btn-sm">
-                            <fa-icon [icon]="'eye'"></fa-icon>
-                            <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
-                        </button>
-                        <button type="submit"
-                                [routerLink]="['/produto', produto.id, 'edit']"
-                                class="btn btn-primary btn-sm">
-                            <fa-icon [icon]="'pencil-alt'"></fa-icon>
-                            <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
-                        </button>
-                        <button type="submit" (click)="delete(produto)"
-                                class="btn btn-danger btn-sm">
-                            <fa-icon [icon]="'times'"></fa-icon>
-                            <span class="d-none d-md-inline" jhiTranslate="entity.action.delete">Delete</span>
-                        </button>
-                    </div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-    <!-- <div [hidden]="produtos?.length === 0">
-        <div class="row justify-content-center">
-            <jhi-item-count [page]="page" [total]="totalItems" [itemsPerPage]="itemsPerPage"></jhi-item-count>
-        </div>
-        <div class="row justify-content-center">
-            <ngb-pagination [collectionSize]="totalItems" [(page)]="page" [pageSize]="itemsPerPage" [maxSize]="5" [rotate]="true" [boundaryLinks]="true" (pageChange)="loadPage(page)"></ngb-pagination>
-        </div>
-    </div> -->
+
+    <nz-alert
+         *ngIf="produtos?.length === 0"
+          nzType="warning"
+          [nzMessage]="traslateString('ngzorroApp.produto.home.notFound')"
+          nzShowIcon
+        ></nz-alert>
+
+    <nz-table 
+    nzShowSizeChanger 
+    [nzTotal]="totalItems"
+    [nzPageIndex]="page"
+    [nzPageSize]="itemsPerPage"
+    [nzFrontPagination]="false"
+    (nzPageIndexChange)="loadPage($event)"
+    [nzData]="produtos"
+    [nzLoading]="produtos ? false : true"  
+    [nzScroll]="{ x: '1350px', y: '240px' }">
+      <thead (nzSortChange)="transition($event)"> 
+        <tr>
+          <th
+          nzShowCheckbox
+          [(nzChecked)]="isAllDisplayDataChecked"
+          (nzCheckedChange)="checkAll($event)"
+          nzWidth="50px"></th>
+          <th nzSortKey="id"    nzShowSort nzWidth="50px" ><span jhiTranslate="global.field.id">ID</span></th>
+          <th nzSortKey="imagem" nzShowSort nzWidth="200px"><span jhiTranslate="ngzorroApp.produto.imagem">Imagem</span></th>
+          <th nzSortKey="nome" nzShowSort nzWidth="200px"><span jhiTranslate="ngzorroApp.produto.nome">Nome</span></th>
+          <th nzSortKey="descricao" nzShowSort nzWidth="200px"><span jhiTranslate="ngzorroApp.produto.descricao">Descricao</span></th>
+          <th nzSortKey="preco" nzShowSort nzWidth="200px"> <span jhiTranslate="ngzorroApp.produto.preco">Preco</span></th>
+          <th nzSortKey="data" nzShowSort nzWidth="200px"><span jhiTranslate="ngzorroApp.produto.data">data</span></th>
+          <th nzSortKey="hora" nzShowSort nzWidth="200px"><span jhiTranslate="ngzorroApp.produto.hora">Hora</span></th>
+          <th nzWidth="250px">Ações</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let produto of produtos">
+            <td nzShowCheckbox
+            [(nzChecked)]="idsChecked[produto.id]"
+            (nzCheckedChange)="refreshStatus()">
+            </td>
+            <td><a [routerLink]="['/produto', produto.id, 'view']">{{produto.id}}</a></td>
+            <td><img *ngIf="produto.imagem"
+                [src]="'data:' + produto.imagemContentType + ';base64,' + produto.imagem" style="width: 60px"></td>
+            <td>{{produto.nome}}</td>
+            <td>{{produto.descricao}}</td>
+            <td>{{produto.preco}}</td>
+            <td>{{produto.data | date:'mediumDate'}}</td>
+            <td>{{produto.hora | date:'medium'}}</td>
+            <td nzRight="0px">
+                <nz-button-group>
+                    <button nz-button nzType="default" 
+                    [routerLink]="['/produto', produto.id, 'view']">
+                        <i nz-icon nzType="eye" nzTheme="outline"></i>
+                    </button>
+
+                    <button nz-button nzType="primary" 
+                            [routerLink]="['/produto', produto.id, 'edit']"
+                            queryParamsHandling="merge">
+                        <i nz-icon nzType="edit" nzTheme="outline"></i>
+                    </button>
+
+                    <button nz-button nzType="danger" 
+                            (click)="delete(produto)">
+                        <i nz-icon nzType="delete" nzTheme="outline"></i>
+                    </button>
+                </nz-button-group>
+            </td>
+        </tr>
+      </tbody>
+    </nz-table>
 </div>
+
+<nz-modal 
+[(nzVisible)]="visibleModalExcluir" 
+[nzTitle]="traslateString('entity.delete.title') | async" 
+(nzOnCancel)="visibleModalExcluir = false" 
+(nzOnOk)="deleteAll()">
+    <span jhiTranslate="ngzorroApp.produto.delete.questionAll">confirm remover users</span>
+</nz-modal>
